--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
+<!-- saved from url=(0051)https://getbootstrap.com/docs/4.0/examples/sign-in/ -->
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Login Page</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="icon" href="https://getbootstrap.com/favicon.ico">
+
+<title>Signin Template for Bootstrap</title>
+
+<!-- Bootstrap core CSS -->
+<link rel="stylesheet" th:href="@{/resources/css/bootstrap.min.css}">
+<link rel="stylesheet" th:href="@{/resources/css/signin.css}">
+
 </head>
-<body>
-		Login Page will come soon !
+
+<body class="text-center">
+	<form class="form-signin">
+		<img class="mb-4" th:src="@{/resources/images/logo.png}" alt=""
+			width="72" height="72">
+		<h1 class="h3 mb-3 font-weight-normal">Login Page</h1>
+		<label for="inputEmail" class="sr-only">Username</label> <input
+			type="text" class="form-control" placeholder="Email address"
+			required="" autofocus=""><label class="sr-only">Password</label>
+		<input type="password" id="inputPassword" class="form-control"
+			placeholder="Password" required="">
+		<div class="checkbox mb-3">
+			<label> <input type="checkbox" value="remember-me">
+				Remember me
+			</label>
+		</div>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+		<p class="mt-5 mb-3 text-muted">2019</p>
+	</form>
+
+
 </body>
 </html>
